<resources>
    <string name="app_name">NotePad2</string>
    <string name="login">Login</string>
    <string name="_00">00</string>
    <string name="total_task_hour">Total Hour</string>
    <string name="SignUp_Btn">SignUp</string>
    <string name="login_Btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_of_note">TITLE OF NOTE</string>
    <string name="register">Register</string>
    <string name="_textview">TextView</string>
    <string name="enter_your_notes_here">Enter_your_notes_here</string>
    <string name="_title">Title</string>
    <string name="textview">TextView</string>
    <string name="forgotpassword">ForgotPassword?</string>
    <string name="password">Password</string>
    <string name="rv_number">0</string>
    <string name="write_your_notes_here">Write your Notes Here</string>

</resources>