<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:background="@color/zcashDeepBlack">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/zcashYellow"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:fabSize="mini"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="My NoteApp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/write_your_notes_here"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/note_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/hourTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:spanCount="2"
        tools:listitem="@layout/test_model" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/topBarCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_bg"
            android:padding="10dp"
            android:src="@drawable/rv_image"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/data_Count"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/badge_bg"
            android:padding="2dp"
            android:forceHasOverlappingRendering="true"
            android:text="@string/rv_number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="ObsoleteLayoutParam" />


    </LinearLayout>


<!--    <TextView
        android:id="@+id/data_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="5dp"
        android:text="@string/_00"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/note_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />-->

    <TextView
        android:id="@+id/hourTextView"
        android:layout_width="98dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:text="@string/total_task_hour"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/hourResult"
        app:layout_constraintStart_toStartOf="@+id/note_rv"
        app:layout_constraintTop_toTopOf="@+id/hourResult" />

    <TextView
        android:id="@+id/hourResult"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:hint="@string/_00"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton3"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/hourTextView"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton3"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
